manifests/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.lrsslv.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: https
          scheme: https
  tls:
    secretName: argocd-tls
